# RegressieTestenStreamLit

./: LICENSE  README.md  app_command.txt  app_v0.py  export_quarto-git.md  mpv2-keys.py  mpv3.py  mpv3_navbarProper.py  mvp1-layoutchanges-1.py  mvp1-row-dispaly7items.py  mvp2-keysnfunct.py  mvp4.py  pyproject.toml  test_afname_V04.py  test_maker_V01.py  test_maker_V02.py  v04.py  v05.py  v05p.py  v08.py  v09lpt.py
data/: tc-12_valk.json  tc-2_valk.json  tc-3_valk.json  tc-4_Valk.json
