[project]
name = "regtest"
version = "0.1.0"
description = "regtest pakket overzicht softpool 2025"
authors = [
    {name = "Peter-Softpool",email = "pvanhaeringen@ictvanafmorgen.nl"}
]
readme = "README.md"
requires-python = ">=3.11.9,<3.14"
dependencies = [
    "streamlit (>=1.50.0,<2.0.0)",
    "streamlit-extras (>=0.7.8,<0.8.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
